--- a/package.json
+++ b/package.json
@@ -46,7 +46,9 @@
     "passport": "^0.7.0",
     "passport-github2": "^0.1.12",
     "passport-google-oauth20": "^2.0.0",
+    "resend": "^6.9.1",
     "socket.io": "^4.8.1",
+    "twilio": "^5.12.0",
     "winston": "^3.17.0"
   },
   "devDependencies": {
